--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -16,18 +16,19 @@
             {% endfor %}
         </ul>
 
-        <div class="language-switcher">
-            <h6>Choose Language</h6>
-            <div class="btn-group dropup">
-              <button type="button" class="btn btn-info btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span>shell</span> &nbsp;&nbsp;<span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu language-control">
+        <ul class="menu-list menu-list-bottom">
+            <li>
+                <a><i class="fa fa-user fa-lg"></i> Authentication</a> <span>none</span>
+            </li>
+            <li data-toggle="collapse" data-target="#language-control" class="collapsed">
+                <a><i class="fa fa-code fa-lg"></i> Source Code</a> <span id="selected-language">shell</span>
+            </li>
+            <ul class="sub-menu collapse out" id="language-control">
                 <li class="active"><a href="#" data-language="shell">shell</a></li>
                 <li><a href="#" data-language="javascript">javascript</a></li>
                 <li><a href="#" data-language="python">python</a></li>
-              </ul>
-            </div>
-        </div>
+            </ul>
+        </ul>
+
     </div>
 </div>
