--- a/rest_framework/templates/rest_framework/docs/index.html
+++ b/rest_framework/templates/rest_framework/docs/index.html
@@ -41,6 +41,14 @@
         <script src="{% static 'rest_framework/docs/js/jquery-1.10.2.min.js' %}"></script>
         <script src="{% static 'rest_framework/docs/js/bootstrap.min.js' %}"></script>
         <script>
+            function normalizeHTTPHeader(str) {
+                return (str.charAt(0).toUpperCase() + str.substring(1))
+                    .replace( /-(.)/g, function($1) { return $1.toUpperCase(); })
+                    .replace( /(Www)/g, function($1) { return 'WWW'; })
+                    .replace( /(Xss)/g, function($1) { return 'XSS'; })
+                    .replace( /(Md5)/g, function($1) { return 'MD5'; })
+            }
+
             function getCookie(name) {
                 var cookieValue = null;
                 if (document.cookie && document.cookie !== '') {
@@ -64,16 +72,16 @@
             const doc = codec.decode(schema)
 
             // Language Control
-            $('.language-control li a').click(function (event) {
+            $('#language-control li').click(function (event) {
                 event.preventDefault();
-                var button = $(this)
-                var language = button.data("language")
+                const languageMenuItem = $(this).find('a');
+                var language = languageMenuItem.data("language")
 
-                var languageControls = $('.language-control li a')
-                languageControls.not('[data-language="' + language +'"]').parent().removeClass("active")
-                languageControls.filter('[data-language="' + language +'"]').parent().addClass("active")
+                var languageControls = $(this).closest('ul').find('li');
+                languageControls.find('a').not('[data-language="' + language +'"]').parent().removeClass("active")
+                languageControls.find('a').filter('[data-language="' + language +'"]').parent().addClass("active")
 
-                button.closest(".btn-group").find('.dropdown-toggle span').first().text(language)
+                $('#selected-language').text(language)
 
                 var codeBlocks = $('pre.highlight')
                 codeBlocks.not('[data-language="' + language +'"]').addClass("hide")
@@ -122,18 +130,21 @@
                 })
 
                 function requestCallback(request) {
-                    var requestText = request.options.method + ' ' + request.url;
-
-                    var parser = document.createElement('a');
+                    let parser = document.createElement('a');
                     parser.href = request.url;
+                    const method = request.options.method
+                    const path = parser.pathname + parser.hash + parser.search
 
-                    form.find(".request-response").text(requestText)
-                    form.find(".request-response").removeClass("hide")
-                    form.find(".request-method").text(request.options.method)
-                    form.find(".request-url").text(parser.pathname + parser.hash + parser.search)
+                    // Filling the main response meta
+                    form.closest(".modal-content").find(".toggle-view").removeClass("hide")
+                    form.find(".request-method").text(method)
+                    form.find(".request-url").text(path)
+
+                    // Filling the raw panel
+                    // form.find(".response-raw-request").text(method + ' ' + path + '\n\n')
                 }
 
-                function responseCallback(response) {
+                function responseCallback(response, responseText) {
                     form.find(".response-status-code").removeClass("label-success").removeClass("label-danger")
                     if (response.ok) {
                         form.find(".response-status-code").addClass("label-success")
@@ -144,26 +155,46 @@
                     form.find(".response-status-code").text(response.status)
                     
                     form.find(".meta").removeClass("hide")
+                    
+                    // Filling the raw panel
+                    var panelText = 'HTTP/1.1 ' + response.status + ' ' + response.statusText + '\n';
+
+                    response.headers.forEach((header, key) => {
+                        panelText += normalizeHTTPHeader(key) + ': ' + header + '\n'
+                    })
+
+                    if (responseText) {
+                        panelText += '\n' + responseText
+                    }
+
+                    form.find(".response-raw-response").text(panelText)
                 }
 
                 const client = new coreapi.Client({csrf: csrf, requestCallback: requestCallback, responseCallback: responseCallback})
 
                 client.action(doc, key, params).then(function (data) {
                     var response = JSON.stringify(data, null, 2);
-                    form.find(".request-info").addClass("hide")
+                    form.find(".request-awaiting").addClass("hide")
                     form.find(".response-data").text(response)
                     form.find(".response-data").removeClass("hide")
-                    form.find(".response-error").addClass("hide")
                 }).catch(function (error) {
                     var response = JSON.stringify(error.content, null, 2);
-                    form.find(".request-info").addClass("hide")
-                    form.find(".response-error").text(error.message)
+                    form.find(".request-awaiting").addClass("hide")
                     form.find(".response-data").text(response)
-                    form.find(".response-error").removeClass("hide")
                     form.find(".response-data").removeClass("hide")
-
-                    /*form.find(".response-data").addClass("hide")*/
                 })
+            });
+
+            $('.toggle-view button').click(function() {
+                var selectedView = $(this).data("display-toggle");
+                $(this).removeClass("btn-default").addClass('btn-info').siblings().removeClass('btn-info');
+                if (selectedView === 'raw') {
+                    $(this).closest(".modal-content").find(".response-raw").removeClass("hide");
+                    $(this).closest(".modal-content").find(".response-data").addClass("hide");
+                } else {
+                    $(this).closest(".modal-content").find(".response-data").removeClass("hide");
+                    $(this).closest(".modal-content").find(".response-raw").addClass("hide");
+                }
             });
         </script>
     </body>
