--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -20,7 +20,7 @@
             <li data-toggle="collapse" data-target="#auth-control" class="collapsed">
                 <a><i class="fa fa-user fa-lg"></i> Authentication</a> <span id="selected-authentication">none</span>
             </li>
-            <ul class="sub-menu out" id="auth-control">
+            <ul class="sub-menu collapse out" id="auth-control">
                 <li data-auth="none" class="active"><a href="#" data-language="none">none</a></li>
                 <li data-auth="token" data-toggle="modal" data-target="#auth_token_modal"><a href="#">token</a></li>
             </ul>
