--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -23,6 +23,7 @@
             <ul class="sub-menu collapse out" id="auth-control">
                 <li data-auth="none" class="active"><a href="#" data-language="none">none</a></li>
                 <li data-auth="token" data-toggle="modal" data-target="#auth_token_modal"><a href="#">token</a></li>
+                <li data-auth="session" data-toggle="modal" data-target="#auth_session_modal"><a href="#">session</a></li>
             </ul>
 
             <li data-toggle="collapse" data-target="#language-control" class="collapsed">
