Rename token to header authentication

--- a/rest_framework/templates/rest_framework/docs/auth/token.html
+++ b/rest_framework/templates/rest_framework/docs/auth/token.html
@@ -5,7 +5,7 @@
 <div class="modal-dialog modal-md" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <h3 class="modal-title"><i class="fa fa-key"></i> Authentication Token</h3>
+      <h3 class="modal-title"><i class="fa fa-key"></i> Authentication Header</h3>
     </div>
 
     <form class="form-horizontal authentication-token-form">
@@ -22,7 +22,7 @@
 
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <button type="submit" class="btn btn-primary">Use Token Authentication</button>
+      <button type="submit" class="btn btn-primary">Use Authentication Header</button>
     </div>
     </form>
 
