--- a/rest_framework/templates/rest_framework/docs/index.html
+++ b/rest_framework/templates/rest_framework/docs/index.html
@@ -270,7 +270,7 @@
                     'type': 'token',
                     'value': value,
                 };
-                $('#selected-authentication').text('token');
+                $('#selected-authentication').text('header');
                 $('#auth-control').children().removeClass('active');
                 $('#auth-control').find("[data-auth='token']").addClass('active');
                 $('#auth_token_modal').modal('hide');
