--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-    <h3 class="brand">{{ document.title }}</h3>
+    <h3 class="brand"><a href=".">{{ document.title }}</a></h3>
 
     <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
     <div class="menu-list">
@@ -8,7 +8,7 @@
             <li data-toggle="collapse" data-target="#{{ section_key }}-dropdown" class="collapsed">
                 <a><i class="fa fa-dot-circle-o fa-lg"></i> {{ section_key }} <span class="arrow"></span></a>
             </li>
-            <ul class="sub-menu collapse in" id="{{ section_key }}-dropdown">
+            <ul class="sub-menu collapse" id="{{ section_key }}-dropdown">
                 {% for link_key, link in section.links.items %}
                     <li><a href="#{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</a></li>
                 {% endfor %}
@@ -17,9 +17,16 @@
         </ul>
 
         <ul class="menu-list menu-list-bottom">
-            <li>
-                <a><i class="fa fa-user fa-lg"></i> Authentication</a> <span>none</span>
+            <li data-toggle="collapse" data-target="#auth-control" class="collapsed">
+                <a><i class="fa fa-user fa-lg"></i> Authentication</a> <span id="selected-authentication">{% if user.is_authenticated %}session{% else %}none{% endif %}</span>
             </li>
+            <ul class="sub-menu collapse out" id="auth-control">
+                <li data-auth="none" {% if not user.is_authenticated %}class="active"{% endif %}><a href="#" data-language="none">none</a></li>
+                <li data-auth="token" data-toggle="modal" data-target="#auth_token_modal"><a href="#">header</a></li>
+                <li data-auth="basic" data-toggle="modal" data-target="#auth_basic_modal"><a href="#">basic</a></li>
+                <li data-auth="session"  data-toggle="modal" data-target="#auth_session_modal" {% if user.is_authenticated %}class="active"{% endif %}><a href="#">session</a></li>
+            </ul>
+
             <li data-toggle="collapse" data-target="#language-control" class="collapsed">
                 <a><i class="fa fa-code fa-lg"></i> Source Code</a> <span id="selected-language">shell</span>
             </li>
